src/objects/Participating_Dealer__c.object
<CustomObject>
    <description>Campaign: Dealers that participate the campaign</description>
    <fields>
        <fullName>Campaign_Package__c</fullName>
        <label>Campaign Package</label>
        <referenceTo>Campaign_Package__c</referenceTo>
        <relationshipLabel>Participating Dealers</relationshipLabel>
        <relationshipName>Participating_Dealers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Participating Dealers</relationshipLabel>
        <relationshipName>Participating_Dealers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Dealer_City__c</fullName>
        <formula>Dealer__r.Dealer_City__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <label>Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Participating Campaigns</relationshipLabel>
        <relationshipName>Participating_Dealers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Session_End_Date__c</fullName>
        <label>Session End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Session_Start_Date__c</fullName>
        <label>Session Start Date</label>
        <type>Date</type>
    </fields>
    <label>Participating Dealer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Campaign__c</columns>
        <columns>Dealer__c</columns>
        <columns>Campaign_Package__c</columns>
        <columns>Session_End_Date__c</columns>
        <columns>Session_Start_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Register_Dealer_for_Campaign_X</fullName>
        <columns>Campaign__c</columns>
        <columns>Dealer__c</columns>
        <columns>Campaign_Package__c</columns>
        <columns>Session_End_Date__c</columns>
        <columns>Session_Start_Date__c</columns>
        <columns>Dealer_City__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Campaign__c</field>
            <operation>equals</operation>
            <value>National Campaign 1</value>
        </filters>
        <label>*Register Dealer for Campaign X</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PD-{0000}</displayFormat>
        <label>Ref No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participating Dealers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>